--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,10 +1,9 @@
 {
   "name": "shared",
   "version": "0.0.0",
-
-  "license": "MIT",
-  "files": [
-    "*"
-  ]
-  
+  "main": "src/index.ts",
+  "types": "src/index.ts",
+  "dependencies": {
+    "typescript": "latest"
+  }  
 }
